fix new search button layout on narrow screens
* we only want padding-right: 0 to apply on wide screens.
* uses same breakpoint as bootstrap does for .col-sm-8

--- a/css/style.css
+++ b/css/style.css
@@ -393,8 +393,10 @@ input#nearby-girls {
 	margin-right: 1em;
 }
 
-.new-search-btn-column {
-	padding-right: 0;
+@media (min-width: 768px) {
+	.new-search-btn-column {
+		padding-right: 0;
+	}
 }
 
 .new-search.btn {
